@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_plot.c,v 1.292 2010-08-03 21:55:22 guru Exp $
+ *	$Id: gmt_plot.c,v 1.293 2010-08-19 18:19:56 guru Exp $
  *
  *	Copyright (c) 1991-2010 by P. Wessel and W. H. F. Smith
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -1364,19 +1364,19 @@ void GMT_map_latline (double lat, double west, double east)		/* Draws a line of 
 	char text[GMT_LONG_TEXT];
 
 	nn = GMT_latpath (lat, west, east, &llon, &llat);
-
 	GMT_n_plot = GMT_geo_to_xy_line (llon, llat, nn);
-	sprintf (text, "Lat = %g", lat);
-	ps_comment (text);
-	if (GMT_parallel_straight) {	/* Simplify to a 2-point straight line */
-		GMT_x_plot[1] = GMT_x_plot[GMT_n_plot-1];
-		GMT_y_plot[1] = GMT_y_plot[GMT_n_plot-1];
-		GMT_pen[1] = GMT_pen[GMT_n_plot-1];
-		GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, 2);
+	if (GMT_n_plot > 1) {	/* Have at least 2 points */
+		sprintf (text, "Lat = %g", lat);
+		ps_comment (text);
+		if (GMT_parallel_straight) {	/* Simplify to a 2-point straight line */
+			GMT_x_plot[1] = GMT_x_plot[GMT_n_plot-1];
+			GMT_y_plot[1] = GMT_y_plot[GMT_n_plot-1];
+			GMT_pen[1] = GMT_pen[GMT_n_plot-1];
+			GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, 2);
+		}
+		else
+			GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, GMT_n_plot);
 	}
-	else
-		GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, GMT_n_plot);
-
 	GMT_free ((void *)llon);
 	GMT_free ((void *)llat);
 }
@@ -1388,19 +1388,19 @@ void GMT_map_lonline (double lon, double south, double north)	/* Draws a line of
 	char text[GMT_LONG_TEXT];
 
 	nn = GMT_lonpath (lon, south, north, &llon, &llat);
-
 	GMT_n_plot = GMT_geo_to_xy_line (llon, llat, nn);
-	sprintf (text, "Lon = %g", lon);
-	ps_comment (text);
-	if (GMT_meridian_straight) {	/* Simplify to a 2-point straight line */
-		GMT_x_plot[1] = GMT_x_plot[GMT_n_plot-1];
-		GMT_y_plot[1] = GMT_y_plot[GMT_n_plot-1];
-		GMT_pen[1] = GMT_pen[GMT_n_plot-1];
-		GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, 2);
+	if (GMT_n_plot > 1) {	/* Have at least 2 points */
+		sprintf (text, "Lon = %g", lon);
+		ps_comment (text);
+		if (GMT_meridian_straight) {	/* Simplify to a 2-point straight line */
+			GMT_x_plot[1] = GMT_x_plot[GMT_n_plot-1];
+			GMT_y_plot[1] = GMT_y_plot[GMT_n_plot-1];
+			GMT_pen[1] = GMT_pen[GMT_n_plot-1];
+			GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, 2);
+		}
+		else
+			GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, GMT_n_plot);
 	}
-	else
-		GMT_plot_line (GMT_x_plot, GMT_y_plot, GMT_pen, GMT_n_plot);
-
 	GMT_free ((void *)llon);
 	GMT_free ((void *)llat);
 }
